<resources>
    <string name="app_name">拌和站与试验室信息管理系统</string>
    <string name="app_project">川南铁路</string>
    <string name="app_address">北京</string>
    <string name="list_arrow">></string>
    <string name="zuzhijiegoug">组织结构</string>
    <string name="selectDevice">选择设备</string>
    <string name="selectTestType">选择试验类型</string>
    <string name="app_zuzhijiegou">组织结构面板</string>
    <string name="comm_leiji">累计</string>
    <string name="comm_number9999">9999</string>
    <string name="comm_number0">0</string>
    <string name="comm_hege">合格</string>
    <string name="comm_youxiao">有效</string>
    <string name="comm_buhege">不合格</string>
    <string name="comm_sycount">试验总数</string>
    <string name="comm_syhegelv">合格率</string>
    <string name="comm_ansycount">按试验总数</string>
    <string name="comm_ansyhegelv">按不合格数</string>
    <string name="comm_today">今日</string>
    <string name="comm_signal_maohao">:</string>
    <string name="unit_tiao">条</string>
    <string name="unit_pan">盘</string>
    <string name="unit_baifen">%</string>
    <string name="unit_bolang">~</string>
    <string name="unit_search">查询</string>
    <string name="comm_weather">22~29℃</string>
    <string name="comm_starttime">2012-9-8 12:12:12</string>
    <string name="comm_endtime">2015-9-8 12:12:12</string>
    <string name="comm_zongpanshu">总盘数:</string>
    <string name="comm_zongfangliang">总方量:</string>
    <string name="comm_baojingdengji">报警等级</string>
    <string name="comm_chaobiaopanshu">超标盘数</string>
    <string name="comm_chaobiaolv">超标率</string>
    <string name="comm_chuzhipanshu">处置盘数</string>
    <string name="comm_chuzhilv">处置率</string>
    <string name="comm_chuji">初级</string>
    <string name="comm_zhongji">中级</string>
    <string name="comm_gaoji">高级</string>
    <string name="comm_shiyanleixing">试验类型</string>
    <string name="comm_shiyanleixing_maohao">试验类型:</string>
    <string name="comm_shiyanshuliang">试验数量</string>
    <string name="comm_shiyanshuliang2">总数</string>
    <string name="comm_buhegeshu">不合格</string>
    <string name="comm_chuzhishu">处置数</string>
    <string name="comm_hunnituqiangdu">混凝土抗压强度</string>
    <string name="comm_gangjingshiyan">钢筋拉力</string>
    <string name="comm_hanjiejietou">钢筋焊接接头</string>
    <string name="comm_jixiejietou">钢筋机械连接</string>
    <string name="login_user_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_login_text">登  录</string>
    <string name="login_company">By：上海同望信息技术有限公司</string>
    <string name="login_company_dk">By：重庆大宽科技发展有限公司</string>
    <string name="login_copyright">Copyright 2016-2017</string>
    <string name="project_sys">试验室管理</string>
    <string name="project_bhz">拌和站管理</string>
    <string name="things_todo">您的代办事项</string>
    <string name="daichuzhiweituo">待处置委托试验</string>
    <string name="daichuzhibuhege">待处置不合格试验</string>
    <string name="shiyanjiluchaxun">试验记录查询</string>
    <string name="main_title_sys">试验室管理</string>
    <string name="main_title_bhz">拌和站管理</string>
    <string name="bhz">拌和站</string>
    <string name="sys">试验室</string>
    <string name="main_title_daichuzhi">待处置委托试验</string>
    <string name="main_title_buhegeshiyan">不合格试验待填报</string>
    <string name="main_title_shiyanjielu">试验记录查询</string>
    <string name="main_title_shiyanjielutongji">试验记录统计</string>
    <string name="sys_menu_hunnituqiangdu">混泥土强度</string>
    <string name="sys_menu_yalijishiyan">压力机试验</string>
    <string name="sys_menu_gangjinglali">钢筋拉力</string>
    <string name="sys_menu_wannengjishiyan">万能机试验</string>
    <string name="sys_menu_gangjinhanjiejietou">钢筋焊接接头</string>
    <string name="sys_menu_gangjinhanjiejietou_j">钢筋焊接</string>
    <string name="sys_menu_gangjinlienjiejietou">钢筋机械连接接头</string>
    <string name="sys_menu_gangjinlienjiejietou_j">钢筋连接</string>
    <string name="sys_menu_tongjifengxi">试验综合统分</string>
    <string name="sys_menu_buhegechuli">不合格处理</string>
    <string name="sys_menu_wannengjibuhege">万能机不合格</string>
    <string name="sys_menu_yalijibuhege">压力机不合格</string>
    <string name="sys_menu_hunnitubuhege">混泥土不合格</string>
    <string name="sys_menu_daichuzhibaojinxinxi">待处置报警信息</string>
    <string name="sys_menu_leijichuzhi">累计处置</string>
    <string name="sys_menu_chuzhilv">处置率</string>
    <string name="sys_menu_scguanli">生产管理</string>
    <string name="sys_menu_shengchenshujuchaxun">生产数据查询</string>
    <string name="sys_menu_daichuzhibaojin">超标处置</string>
    <string name="sys_menu_tongjifengxibhz">统计分析</string>
    <string name="bhz_menu_zonghetongji">综合统计</string>
    <string name="sys_menu_cailiaoyongliang">材料用量核算</string>
    <string name="bhz_menu_baojingzaiyao">报警摘要</string>
    <string name="zzjg_title">组织结构选择</string>
    <string name="hntqd_title">川南铁路 > 试验室管理 > XX功能</string>
    <string name="hntqd_title_xq">混泥土强度详情</string>
    <string name="hntqd_xq_lizhi">力值曲线详情</string>
    <string name="hntqd_item_name">试验设备:</string>
    <string name="hntqd_item_weituoNum">委托编号:</string>
    <string name="hntqd_item_testType">试验类型:</string>
    <string name="hntqd_item_shijianNum">试件编号:</string>
    <string name="hntqd_item_sjQiangdu">设计强度:</string>
    <string name="hntqd_item_qiangduDaibiao">强度代表值:</string>
    <string name="hntqd_item_projectName">工程名称:</string>
    <string name="hntqd_item_partName">施工部位:</string>
    <string name="hntqd_xq_projectPart">施工部位:</string>
    <string name="hntqd_xq_lingqi">龄期:</string>
    <string name="hntqd_xq_shijianchicun">试件尺寸:</string>
    <string name="hntqd_xq_hezai">荷载</string>
    <string name="hntqd_xq_qiangdudanzhi">强度单值</string>
    <string name="hntqd_xq_quxian">曲线</string>
    <string name="hntqd_xq_chakan">查看</string>
    <string name="gjll_item_kanglaqiangdu">抗拉强度:</string>
    <string name="gjll_item_pingzong">品    种:</string>
    <string name="gjll_item_testType">试验类型:</string>
    <string name="gjll_item_qufuli">屈服力:</string>
    <string name="gjll_xq_zhijing">直径:</string>
    <string name="gjll_xq_qufuqiangdu">屈服强度:</string>
    <string name="gjll_xq_kanglali">抗拉力:</string>
    <string name="gjll_xq_lashengqiangdu">拉升强度:</string>
    <string name="gjll_xq_shenzhanglv">伸长率:</string>
    <string name="gjll_title_xq1">钢筋拉力详情</string>
    <string name="gjll_title_xq2">钢筋焊接接头详情</string>
    <string name="gjll_title_xq3">钢筋机械连接接头详情</string>
    <string name="gjll_title_sjcc">试件尺寸</string>
    <string name="gjll_title_gczj">公称直径</string>
    <string name="gjll_title_sjmj">品种</string>
    <string name="gjll_title_zjrq">制件日期</string>
    <string name="sys_gj_tbh1">原始标距</string>
    <string name="sys_gj_tbh2">断后标距</string>
    <string name="sys_gj_tbh3">最大力值</string>
    <string name="sys_gj_tbh4">抗拉强度</string>
    <string name="sys_gj_tbh5">屈服力值</string>
    <string name="sys_gj_tbh6">屈服强度</string>
    <string name="sys_gj_tbh7">伸长率</string>
    <string name="sys_gj_tbh8">最大力总伸长率</string>
    <string name="bhgsy_hntky">混泥土抗压</string>
    <string name="bhgsy_gjll">钢筋拉力</string>
    <string name="bhgsy_gjzjjt">钢筋转接接头</string>
    <string name="bhgsy_gjjxljjt">钢筋机械连接接头</string>
    <string name="bhgsy_weichuzhi">未处置</string>
    <string name="bhgsy_yichuzhi">已处置</string>
    <string name="bhgsy_syriqi">试验日期:</string>
    <string name="bhgsy_sysmc">试验室名称:</string>
    <string name="bhgsy_symc">试验名称:</string>
    <string name="bhgsy_pzbm">品种编码:</string>
    <string name="bhgsy_ggzl">规格种类:</string>
    <string name="bhgsy_gczj">公称直径:</string>
    <string name="bhgsy_czry">操作人员:</string>
    <string name="bhgsy_pdjg">判断结果:</string>
    <string name="bhgsy_sjxh">试件序号</string>
    <string name="bhgsy_lizhi">力值</string>
    <string name="bhgsy_qufulizhi">屈服力值</string>
    <string name="bhgsy_qiangdu">强度</string>
    <string name="bhgsy_xq">不合格试验处置详情</string>
    <string name="bhgsy_lb">试验列表</string>
    <string name="bhgsy_chuzhiorchakan">超标处置</string>
    <string name="bhgsy_jianlishenpi">监理审批</string>
    <string name="tjfx_biaoduan">标段</string>
    <string name="tjfx_cishu">次数</string>
    <string name="tjfx_hege">合格</string>
    <string name="tjfx_youxiao">有效</string>
    <string name="tjfx_buhege">不合格</string>
    <string name="tjfx_hegelv">合格率</string>
    <string name="scshuju_xq_list">生产数据查询详情列表</string>
    <string name="scshuju_xq_title">生产数据查询详情</string>
    <string name="scshuju_item_jzbw">浇筑部位:</string>
    <string name="scshuju_item_ddlc">地点里程:</string>
    <string name="scshuju_item_qddj">强度等级:</string>
    <string name="scshuju_item_shuliang">数量:</string>
    <string name="scshuju_xq_clsj">出料时间:</string>
    <string name="scshuju_xq_jbsj">搅拌时间:</string>
    <string name="scshuju_xq_gdh">工单号:</string>
    <string name="scshuju_xq_czz">操作者:</string>
    <string name="scshuju_xq_chuliren">处理人:</string>
    <string name="scshuju_xq_ddlc">地点/里程:</string>
    <string name="scshuju_xq_wjjpz">外加剂品种:</string>
    <string name="scshuju_xq_snpz">水泥品种:</string>
    <string name="scshuju_xq_sgpbbh">施工配比编号:</string>
    <string name="scshuju_xq_shiji">实际(kg)</string>
    <string name="scshuju_xq_peibi">配比(kg)</string>
    <string name="scshuju_xq_wucha">误差(kg)</string>
    <string name="scshuju_xq_wuchabaifenbi">误差率(%)</string>
    <string name="title_activity_sys_tongjfenxi">SysTongjfenxiActivity</string>
    <string name="comm_zuzhi">无数据</string>
    <string name="comm_ge_bhz">站</string>
    <string name="comm_tai_bhj">机</string>
    <string name="comm_ge_sys">室</string>
    <string name="comm_tai_syj">机</string>
    <string name="cailiao_mingcheng">材料名称</string>
    <string name="cailiao_shiji">实际(kg)</string>
    <string name="cailiao_peibi">配比(kg)</string>
    <string name="cailiao_wuchazhi">误差值(kg)</string>
    <string name="hnttjfx_fl1">时间</string>
    <string name="hnttjfx_fl2">盘数</string>
    <string name="hnttjfx_fl3">方量</string>
    <string name="hnttjfx_fl4">低报警(%)</string>
    <string name="hnttjfx_fl5">中报警(%)</string>
    <string name="hnttjfx_fl6">高报警(%)</string>
    <string name="hnttjfx_ji">按季度</string>
    <string name="hnttjfx_yue">按月</string>
    <string name="hnttjfx_zhou">按周</string>
    <string name="hnttjfx_ri">日</string>
    <string name="hnttjfx_title1">生产量统计</string>
    <string name="hnttjfx_title2">误差走势</string>
    <string name="dev_name">设备名称</string>
    <string name="bhz_sts_zname">机名称</string>
    <string name="bhz_sts_jname">生产线</string>
    <string name="bhz_sts_chuliaoshijian">出料时间</string>
    <string name="bhz_sts_caijishijian">采集时间</string>
    <string name="bhz_sts_baocunshijian">保存时间</string>
    <string name="bhz_sts_shangchuanshijian">上传时间</string>
    <string name="bhz_sts_sts">状态</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_comm_zuhijiegou">CommZuhijiegou</string>
    <string name="title_activity_sys__lindao">SYS_LindaoActivity</string>
    <string name="title_activity_bhz__lingdao">BHZ_LingdaoActivity</string>
    <string name="title_activity_bhz__cailiaoyongliang">BHZ_CailiaoyongliangActivity</string>
    <string name="title_activity_push_message_list">PushMessageListActivity</string>
    <string name="title_activity_bhz__tongjifenxi">BHZ_TongjifenxiActivity</string>
    <string name="title_activity_comm_bhzstatus">CommBHZStatusActivity</string>
    <string name="chuzhi_ren">处置人</string>
    <string name="chuzhi_day">处置日期</string>
    <string name="queren_day">确认日期</string>
    <string name="shenpi_day">审批日期</string>
    <string name="action_bhz_sts">拌和机状态</string>
    <string name="action_version">关于系统</string>
    <string name="action_banben">版本号</string>
    <string name="action_shengji">检查更新</string>
    <string name="action_name">项目名称</string>
    <string name="action_Appname">App名称</string>
    <string name="By_name">上海同望信息技术有限公司 </string>
    <string name="banquan">版权 </string>
    <string name="CopyRight"> 2015-2016 </string>
    <string name="title_activity_ot_about">OT_aboutActivity</string>
</resources>