<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    tools:context="com.shtoone.shtw_liqing_app.OT_aboutActivity"
    tools:ignore="MergeRootFrame" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/buttonBgBlue">

        <TextView
            android:id="@+id/project_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="5dp"
            android:paddingBottom="10dp"
            android:text="@string/hntqd_title"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/weather_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_launcher" />
    </RelativeLayout>



    <!-- 2015-09-11 ADD BY 郑兴泉 BEGIN   -->
    <!-- Logo图片位置 -->
    <ImageView
        android:id="@+id/imageView1"
        android:gravity="center|center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1">

        <TableRow  android:layout_marginTop="20sp">
            <!-- 项目标题 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:textColor="@color/black"
                android:text="@string/action_name" />
            <TextView
                android:id="@+id/txtProjectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="10sp"
                android:text="@string/app_project"
                android:gravity="left"/>
        </TableRow>

        <TableRow android:layout_marginTop="20sp" >
            <!-- App标题 -->
            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_Appname"
                android:layout_marginLeft="30sp"
                android:textColor="@color/black"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginLeft="10sp"
                android:gravity="left"/>
        </TableRow>

        <!-- 当前版本  信息 -->
        <TableRow  android:layout_marginTop="20sp" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_banben"
                android:layout_marginLeft="30sp"
                android:textColor="@color/black"
                android:enabled="false"/>

            <TextView
                android:id="@+id/txtbanben"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text=""
                android:layout_marginLeft="10sp"
                android:gravity="left"/>
        </TableRow>

        <!-- CopyRight信息 -->
        <TableRow android:layout_marginTop="20sp">
            <TextView
                android:id="@+id/txtCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banquan"
                android:textColor="@color/black"
                android:layout_marginLeft="30sp"/>

            <TextView
                android:id="@+id/txtCopyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/By_name"
                android:textColor="@color/black"
                android:layout_marginLeft="10sp"
                android:gravity="left"/>
        </TableRow>

        <!-- 新版本 按钮 -->
        <TableRow android:layout_marginTop="60sp"
            android:gravity="center|center_horizontal|center_vertical">
            <Button
                android:id="@+id/but_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapeskyblue"
                android:textColor="@color/white"
                android:text="@string/action_shengji" />
        </TableRow>

    </TableLayout>

    <!-- 2015-09-11 ADD BY 郑兴泉 END   -->
</LinearLayout>

