<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <!-- 顶部图形标题，数据所属组织机构 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/groupsharp">

        <!-- 右边组织机构名称 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.33"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arraw" />

            <TextView
                android:id="@+id/bhz_sts_zname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_weight="0.33"
                android:text="@string/bhz_sts_zname"
                android:textColor="@color/blueText"
                android:textSize="15dp"
                android:visibility="gone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bhz_sts_jname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:layout_weight="0.34"
                android:text="@string/bhz_sts_jname"
                android:textColor="@color/blueText"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 右边显示拌合站数量 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/bhz_sts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/bhz_sts_sts"
                android:textColor="@color/blueText"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <!-- 出料时间 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bhz_sts_chuliaoshijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/bhz_sts_chuliaoshijian"
            android:textStyle="bold"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/bhz_sts_chuliaoshijian_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- 采集时间 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bhz_sts_caijishijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/bhz_sts_caijishijian"
            android:textStyle="bold"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/bhz_sts_caijishijian_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- 保存时间 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bhz_sts_baocunshijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/bhz_sts_baocunshijian"
            android:textStyle="bold"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/bhz_sts_baocunshijian_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- 保存时间 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bhz_sts_shangchuanshijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/bhz_sts_shangchuanshijian"
            android:textStyle="bold"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/bhz_sts_shangchuanshijian_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>