<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/loginbgimg"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame"
    android:gravity="center">

    <TableLayout
        android:layout_marginTop="50dp"
        android:id="@+id/login_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:stretchColumns="1">

        <!-- Logo图片位置 -->
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_dk" />

        <!-- 系统标题 -->
        <TextView
            android:id="@+id/txtAppName"
            style="@style/Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/app_name"/>

        <!-- 输入用户名的行 -->
        <TableRow android:layout_marginTop="20dp"
            android:gravity="center">

            <EditText
                android:id="@+id/userEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/editsharp"
                android:drawableLeft="@drawable/username"
                android:drawablePadding="2dp"
                android:hint="@string/login_user_hint"
                android:imeOptions="flagNavigateNext"
                android:inputType="text"
                android:maxLength="18"
                android:nextFocusForward="@+id/pwdEditText"
                android:paddingTop="10dp"
                android:textColor="@color/white" />
        </TableRow>

        <!-- 输入密码的行 -->
        <TableRow android:layout_marginTop="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/pwdEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/editsharp"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="2dp"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="18"
                android:paddingTop="10dp"
                android:textColor="@color/white" />
        </TableRow>

        <!-- 登录按钮 -->
        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center|center_horizontal|center_vertical">

            <Button
                android:id="@+id/bnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnlogin_selector"
                android:text="@string/login_login_text"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/login_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_weight="0.1"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">
        <!-- 制作单位 -->
        <TextView
            android:id="@+id/txtCompany"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_company_dk" />

        <!-- CopyRight信息 -->
        <TextView
            android:id="@+id/txtCopyright"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_copyright" />
    </LinearLayout>
</RelativeLayout>